// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Sites List Item component will render a dive site with full properties 1`] = `
"<div class="flex flex-col gap-0 bg-gradient-to-b from-blue-200 to-blue-400 dark:from-blue-800 dark:to-blue-950 shadow-xl rounded-md border-blue-900 border-opacity-75 border-2 relative"><a class="absolute -top-32" name="e25add45-3bf3-4be5-9859-7ea516f63f00"></a><!-- Site Name -->
  <div class="text-center bg-blue-200 rounded-t-md"><button class="text-link hover:text-link-hover text-sm" data-testid="select-site-e25add45-3bf3-4be5-9859-7ea516f63f00" type="button">
      <!--v-if-->
      <h1 class="text-2xl font-bold capitalize py-1.5">webbed, defiant polyester</h1>
    </button></div>
  <div class="flex flex-col gap-3 p-3 grow">
    <!-- Location and creator -->
    <div class="flex align-baseline items-baseline">
      <p class="grow"><span class="text-danger mr-2"><i class="fas fa-map-marker-alt fa-fw"></i></span><span>Waldorf, ME, JO</span></p>
      <p><button class="text-link hover:text-link-hover text-lg" data-testid="site-creator-e25add45-3bf3-4be5-9859-7ea516f63f00" type="button">
          <!--v-if--><span class="mr-2"><i class="fas fa-user fa-fw"></i></span><span>@Constance_Walker19</span>
        </button></p>
    </div><!-- Description -->
    <div class="text-sm text-justify italic">Possimus animi voluptate repellendus hic facilis dolorem. Animi natus perspiciatis ut voluptate velit eos vel nihil doloremque. Dolorem tenetur magnam maxime. Aut doloribus eveniet corporis.</div><!-- Shim to force the rest of the content to the bottom -->
    <div class="grow"></div><!-- Shore access, free to dive -->
    <div class="flex gap-1.5 justify-between">
      <div class="text-left">
        <p class="font-bold">Shore Access:</p>
        <p class="text-sm italic">Yes</p>
      </div>
      <div class="text-right">
        <p class="font-bold">Free to Dive:</p>
        <p class="text-sm italic">Yes</p>
      </div>
    </div><!-- Depth and water type -->
    <div class="flex gap-1.5 justify-between">
      <div class="text-left">
        <p class="font-bold">Depth:</p>
        <p class="text-sm italic"><span>21.62 m</span></p>
      </div>
      <div class="text-right">
        <p class="font-bold">Water Type:</p>
        <p class="text-sm italic">Fresh water</p>
      </div>
    </div><!-- Rating and difficulty -->
    <div class="flex items-center justify-between">
      <div class="text-left">
        <p class="font-bold">Rating:</p>
        <p>
        <div readonly="">5</div>
        </p>
      </div>
      <div class="grow"></div>
      <div class="text-right">
        <p class="font-bold">Difficulty:</p>
        <p>
        <div readonly="">4.4</div>
        </p>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Dive Sites List Item component will render a dive site with minimal properties 1`] = `
"<div class="flex flex-col gap-0 bg-gradient-to-b from-blue-200 to-blue-400 dark:from-blue-800 dark:to-blue-950 shadow-xl rounded-md border-blue-900 border-opacity-75 border-2 relative"><a class="absolute -top-32" name="90b06d4a-605c-49d0-8738-cf557cf34b0a"></a><!-- Site Name -->
  <div class="text-center bg-blue-200 rounded-t-md"><button class="text-link hover:text-link-hover text-sm" data-testid="select-site-90b06d4a-605c-49d0-8738-cf557cf34b0a" type="button">
      <!--v-if-->
      <h1 class="text-2xl font-bold capitalize py-1.5">remorseful, spanish demon</h1>
    </button></div>
  <div class="flex flex-col gap-3 p-3 grow">
    <!-- Location and creator -->
    <div class="flex align-baseline items-baseline">
      <p class="grow"><span class="text-danger mr-2"><i class="fas fa-map-marker-alt fa-fw"></i></span><span>Hudsonstad, NV, HM</span></p>
      <p><button class="text-link hover:text-link-hover text-lg" data-testid="site-creator-90b06d4a-605c-49d0-8738-cf557cf34b0a" type="button">
          <!--v-if--><span class="mr-2"><i class="fas fa-user fa-fw"></i></span><span>@Grayson.Wolff58</span>
        </button></p>
    </div><!-- Description -->
    <div class="text-sm text-justify italic"></div><!-- Shim to force the rest of the content to the bottom -->
    <div class="grow"></div><!-- Shore access, free to dive -->
    <div class="flex gap-1.5 justify-between">
      <div class="text-left">
        <p class="font-bold">Shore Access:</p>
        <p class="text-sm italic">Unknown</p>
      </div>
      <div class="text-right">
        <p class="font-bold">Free to Dive:</p>
        <p class="text-sm italic">Unknown</p>
      </div>
    </div><!-- Depth and water type -->
    <div class="flex gap-1.5 justify-between">
      <div class="text-left">
        <p class="font-bold">Depth:</p>
        <p class="text-sm italic"><span>Unknown</span></p>
      </div>
      <div class="text-right">
        <p class="font-bold">Water Type:</p>
        <p class="text-sm italic">Unknown</p>
      </div>
    </div><!-- Rating and difficulty -->
    <div class="flex items-center justify-between">
      <!--v-if-->
      <div class="grow"></div>
      <!--v-if-->
    </div>
  </div>
</div>"
`;
